--- a/example/styles.css
+++ b/example/styles.css
@@ -1,4 +1,4 @@
-#connect-area {
+#connect-area, #drm-area {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: min-content min-content;
